# gdbwire

./: .gitignore  AUTHORS  CONTRIBUTE.md  Makefile.am  README  README.md  bootstrap  configure.ac  configure.in
lib/: Makefile.am  foo.c
m4/: gdbwire.m4
src/: gdbmi_grammar.y  gdbmi_lexer.l  gdbmi_parser.c  gdbmi_parser.h  gdbmi_pt_alloc.h  gdbwire.c  gdbwire.h  gdbwire_annotation_parser.c  gdbwire_annotation_parser.h  gdbwire_annotation_pt.h  gdbwire_annotation_pt_alloc.c  gdbwire_annotation_pt_alloc.h  gdbwire_assert.h  gdbwire_logger.c  gdbwire_logger.h  gdbwire_mi_command.c  gdbwire_mi_command.h  gdbwire_mi_grammar.txt  gdbwire_mi_grammar.y  gdbwire_mi_lexer.l  gdbwire_mi_parser.c  gdbwire_mi_parser.h  gdbwire_mi_pt.c  gdbwire_mi_pt.h  gdbwire_mi_pt_alloc.c  gdbwire_mi_pt_alloc.h  gdbwire_result.h  gdbwire_string.c  gdbwire_string.h  gdbwire_sys.c  gdbwire_sys.h
src/amalgamation/: mkgdbwire.py
src/lib/containers/: gdbwire_string.c  gdbwire_string.h
src/lib/gdbmi/: gdbmi_grammar.txt  gdbmi_grammar.y  gdbmi_lexer.l  gdbmi_oc.c  gdbmi_oc.h  gdbmi_parser.c  gdbmi_parser.h  gdbmi_pt.c  gdbmi_pt.h  gdbmi_pt_alloc.c  gdbmi_pt_alloc.h  gdbmi_pt_print.c  gdbmi_pt_print.h  my_gdbmi_grammar.txt
src/lib/gdbwire/: gdbwire.c  gdbwire.h
src/lib/logging/: clog.h  gdbwire_assert.h  gdbwire_logger.c  gdbwire_logger.h  gdbwire_result.h
src/progs/examples/: gdbmi_example.c  gdbwire_example.c  gdbwire_mi_example.c
src/progs/gdbmi/: driver.c
src/progs/test_suite/: fixture.cpp  fixture.h  gdbmi.cpp  gdbmi_parser.cpp  gdbmi_pt.cpp  gdbwire.cpp  gdbwire_annotation_pt.cpp  gdbwire_mi_command.cpp  gdbwire_mi_parser.cpp  gdbwire_mi_pt.cpp  gdbwire_string.cpp  main.cpp
src/progs/test_suite/containers/: gdbwire_string.cpp
src/progs/test_suite/data/GdbmiPtTest/basic/: expected.txt
src/progs/test_suite/data/GdbmiPtTest/console/basic/: input.mi
src/progs/test_suite/data/GdbmiPtTest/line/: prompt.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/exec/: async_class.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/exec/async_class/: input.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/notify/: basic.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/notify/async_class/: input.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/status/: basic.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/status/async_class/: input.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/async/token/: basic.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/stream/combo/basic/: input.mi
src/progs/test_suite/data/GdbmiPtTest/oob_record/stream/console/: characters.mi  manylines.mi
src/progs/test_suite/data/GdbmiPtTest/parse_error/syntax/: list_of_2_cstring.mi  multi_line_error.mi
src/progs/test_suite/data/GdbmiPtTest/parse_error/syntax/destructor/: opt_variable.mi  output_variant.mi  result.mi  result_list.mi  variable.mi
src/progs/test_suite/data/GdbmiPtTest/result/cstring/: key_value.mi  key_value_whitespace.mi  value.mi
src/progs/test_suite/data/GdbmiPtTest/result/list/: key_null.mi  null.mi  of_2_cstring.mi  of_3_cstring.mi
src/progs/test_suite/data/GdbmiPtTest/result/mixed/: next.mi  recursive.mi
src/progs/test_suite/data/GdbmiPtTest/result/tuple/: key_null.mi  no_key.mi  of_2_cstring.mi  of_cstring.mi
src/progs/test_suite/data/GdbmiPtTest/result_record/result_class/connected/: input.mi
src/progs/test_suite/data/GdbmiPtTest/result_record/result_class/error/: input.mi
src/progs/test_suite/data/GdbmiTest/basic/: expected.txt
src/progs/test_suite/data/GdbwireAnnotationPtTest/annotation/: breakpoints-invalid.txt  commands.txt  error-begin.txt  error.txt  exited.txt  frame-end.txt  frames-invalid.txt  instance-choice.txt  overload-choice.txt  prompt.txt  query.txt  quit.txt  source.txt
src/progs/test_suite/data/GdbwireAnnotationPtTest/console_output/: basic.txt  characters.txt
src/progs/test_suite/data/GdbwireBasicTest/interpreter_exec/: basic.mi  command_and_prompt.mi  command_and_stream.mi  error.mi
src/progs/test_suite/data/GdbwireMiCommandTest/break_info/: address.mi  break_info.txt  catchpoint.mi  enable.mi  enable_multi_loc.mi  multi_bkpt.mi  multi_bkpt_gdb9.mi  no_breakpoints.mi  no_number.mi  one_bkpt.mi  two_bkpts.mi  watchpoint.mi
src/progs/test_suite/data/GdbwireMiCommandTest/file_list_exec_source_file/: extra_field.mi  fail_file.mi  fail_fullname.mi  fail_line.mi  fail_macro_info.mi  no_fullname.mi  no_macro_info.mi
src/progs/test_suite/data/GdbwireMiCommandTest/file_list_exec_source_files/: 1_pair.mi  1_pair_fail_file.mi  1_pair_no_fullname.mi  2_pair.mi  2_pair_no_fullname.mi  empty.mi  file_full_debug_fully_read.mi  large.mi  no_full.mi
src/progs/test_suite/data/GdbwireMiCommandTest/stack_info_frame/: basic.mi  extra_field.mi  from_field.mi  minimal.mi  no_address.mi  no_level.mi
src/progs/test_suite/data/GdbwireMiPtTest/oob_record/async/combo/: basic.mi
src/progs/test_suite/data/GdbwireMiPtTest/oob_record/async/result/: null.mi
src/progs/test_suite/data/GdbwireMiPtTest/oob_record/combo/: basic.mi
src/progs/test_suite/data/GdbwireMiPtTest/oob_record/stream/console/: escape1.mi
src/progs/test_suite/data/GdbwireMiPtTest/parse_error/syntax/: end.mi  middle.mi  prompt.mi
src/progs/test_suite/data/GdbwireMiPtTest/parse_error/syntax/dtor/: token.mi
src/progs/test_suite/data/GdbwireMiPtTest/result/list/: of_3_cstring.mi  of_cstring.mi  of_null_list.mi
src/progs/test_suite/data/GdbwireMiPtTest/result/tuple/: null.mi  of_3_cstring.mi  of_null_tuple.mi
src/progs/test_suite/data/GdbwireMiPtTest/result_record/result/: null.mi
src/progs/test_suite/data/GdbwireMiPtTest/result_record/result_class/: unsupported.mi
src/progs/test_suite/data/GdbwireMiPtTest/result_record/token/: basic.mi
src/progs/test_suite/data/GdbwireTest/callbacks/parse_error/: basic.mi
src/progs/test_suite/data/GdbwireTest/callbacks/result_record/: done.mi
src/progs/test_suite/gdbmi/: gdbmi_parser.cpp  gdbmi_pt.cpp
src/progs/test_suite/gdbwire/: gdbwire.cpp
(+2 files in other folders)
